# Pinocchio-robot-with-ros2-control

./: readme.txt
install/: local_setup.sh  setup.sh
install/control_pkg/share/control_pkg/: package.sh
install/descrip_pino/share/descrip_pino/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mit_controllers/share/mit_controllers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_control_msgs/share/motor_control_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mujoco_pkg/lib/mujoco_pkg/: mujoco
log/: latest_build
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/controller_config/: config.yaml  pid_config.yaml
src/control_pkg/include/: BalanceCtrl.h  Estimator.h  Imu.h  Kenimatics_normal_solution.h  LowCmd.h  LowPassFilter.h  LowState.h  MotorLowControl.h  Reversal_solution.h  Robot.h  mathtool.h  unitreeRobot.h
src/control_pkg/include/FSM/: Balance_State.h  ControlComponent.h  EnumClassList.h  FSM.h  FSMState.h  Free_Stand_State.h  Free_State.h  Passive_State.h  Stand_State.h  Trotting_State.h  UserCmd.h
src/control_pkg/include/Gait/: FeetEndCal.h  GaitGenerator.h  WaveGenerator.h
src/control_pkg/include/IOPort/: IORos.h
src/control_pkg/launch/: bringup.launch.py  mujoco_bringup.launch.py  unitree_bringup.launch.py
src/control_pkg/ros2_control_config/: control.ros2_control.xacro  unitree_ros2_control.xacro
src/control_pkg/src/: start.cpp
src/control_pkg/src/FSM/: Balance_State.cpp  ControlComponent.cpp  FSM.cpp  Free_Stand_State.cpp  Free_State.cpp  Passive_State.cpp  Stand_State.cpp  Trotting_State.cpp  UserCmd.cpp
src/control_pkg/src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
src/control_pkg/src/IOPort/: IORos.cpp
src/control_pkg/src/common/: Imu.cpp  Robot.cpp
src/control_pkg/src/math/: Kenimatics_normal_solution.cpp
src/descrip_pino/: CMakeLists.txt
src/descrip_pino/urdf/: Pino.urdf  Pino_model.xml  Pino_robot.xml  Pinotest.urdf  unitree.urdf.xacro
src/imu_pkg/: CMakeLists.txt
src/mit_controllers/src/: mit_controllers.cpp
src/mujoco_pkg/: CMakeLists.txt  package.xml
src/mujoco_pkg/include/: IOROS.h
src/mujoco_pkg/src/: ioros.cpp  mj.cc  mujoco.cpp
src/unitree_hardware_interface/: CMakeLists.txt
(+67 files in other folders)
